--- a/Example/SGWiNetWSConfig/Base.lproj/Main.storyboard
+++ b/Example/SGWiNetWSConfig/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                                             <action selector="clearRequest:" destination="q1V-23-IFk" eventType="touchUpInside" id="K0N-Iy-UYf"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="入参消息:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCb-iH-YVm">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="入参消息 (格式 key,value):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCb-iH-YVm">
                                         <rect key="frame" x="0.0" y="138" width="343" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
