--- a/Example/SGWiNetWSConfig/Base.lproj/Main.storyboard
+++ b/Example/SGWiNetWSConfig/Base.lproj/Main.storyboard
@@ -57,16 +57,42 @@
                                         <rect key="frame" x="0.0" y="265" width="343" height="282"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOj-f6-t0U">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="vdB-HW-t9C">
                                         <rect key="frame" x="0.0" y="563" width="343" height="44"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="IbQ-Dp-Vbg"/>
-                                        </constraints>
-                                        <state key="normal" title="连接"/>
-                                        <connections>
-                                            <action selector="connectAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="J8q-4f-776"/>
-                                        </connections>
-                                    </button>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOj-f6-t0U">
+                                                <rect key="frame" x="0.0" y="0.0" width="86" height="44"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="IbQ-Dp-Vbg"/>
+                                                </constraints>
+                                                <state key="normal" title="连接"/>
+                                                <connections>
+                                                    <action selector="connectAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="J8q-4f-776"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mjq-PO-aLM">
+                                                <rect key="frame" x="86" y="0.0" width="85.5" height="44"/>
+                                                <state key="normal" title="断开"/>
+                                                <connections>
+                                                    <action selector="disconnectAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="XSP-hj-V5A"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="usb-TT-kX3">
+                                                <rect key="frame" x="171.5" y="0.0" width="86" height="44"/>
+                                                <state key="normal" title="获取token"/>
+                                                <connections>
+                                                    <action selector="getTokenAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="zSF-UI-Haa"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yha-Gz-Fl7">
+                                                <rect key="frame" x="257.5" y="0.0" width="85.5" height="44"/>
+                                                <state key="normal" title="消息测试"/>
+                                                <connections>
+                                                    <action selector="sendTestAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="N5d-DV-5nw"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
