text input traits

--- a/Example/SGWiNetWSConfig/Base.lproj/Main.storyboard
+++ b/Example/SGWiNetWSConfig/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                         </constraints>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="done"/>
                                         <connections>
                                             <outlet property="delegate" destination="whP-gf-Uak" id="qxQ-kc-LZF"/>
                                         </connections>
